[metadata]
name = labrecipipe
version = 0.0.2
description = Labrecorder remote
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = labrecorder, labstreaminglayer, xdf
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
scripts =
install_requires =


[options.entry_points]
console_scripts =
    executable-name = package.module:function

[options.packages.find]
where=src

